added CSS styles from Part1 of ReadMe.md

--- a/addams_family_tree.html
+++ b/addams_family_tree.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Addams Family Tree</title>
+  <link rel="stylesheet" href="styles.css">
 
-  <!-- Link to your stylesheet here -->
-  
 </head>
 
 <body>
