--- a/addams_family_tree.html
+++ b/addams_family_tree.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <header>
-    <h1>The Addams Family Tree</h1>
+  <header class='tree'>
+    <h1 class='title'>The Addams Family Tree</h1>
     <img src="http://vignette3.wikia.nocookie.net/addamsfamily/images/1/15/Addamstree.png/revision/latest?cb=20130103004320" alt="gomez and cara mia">
   </header>
 
   <section>
-    <h3>Gomez Addams</h3>
+    <h3 class ='name title'>Gomez Addams</h3>
     <img src="http://images2.fanpop.com/image/photos/11200000/John-Astin-Gomez-Addams-gomez-addams-11245159-450-338.jpg" alt="Gomez">
     <ul>
       <li>Mustachioed</li>
@@ -24,8 +24,8 @@
     </ul>
   </section>
 
-  <section>
-    <h3>Morticia Addams</h3>
+  <section id="morticia">
+    <h3 class ='name title'>Morticia Addams</h3>
     <img src="https://media3.giphy.com/media/a1KF6AgZV2eEU/200_s.gif" alt="Morticia">
     <ul>
       <li>Dry Sense of Humour</li>
@@ -35,7 +35,7 @@
   </section>
 
   <section>
-    <h3>Pugsley Addams</h3>
+    <h3 class ='name title'>Pugsley Addams</h3>
     <img src="http://i2.cdn.turner.com/cnnnext/dam/assets/141209131444-ken-weatherwax-restricted-story-top.jpg" alt="Pugsley">
     <ul>
       <li>Chubby</li>
@@ -44,18 +44,18 @@
     </ul>
   </section>
 
-  <section>
-    <h3>Wednesday Addams</h3>
+  <section id ='wednesday'>
+    <h3 class ='name title'>Wednesday Addams</h3>
     <img src="http://2.bp.blogspot.com/-oj26rSAgOFc/TpeQmxrE9ZI/AAAAAAAAA10/MU-OtBYWcY4/s1600/addams3.jpg" alt="Wednesday">
     <ul>
-      <li>Somber</li>
+      <li class='somber'>Somber</li>
       <li>Likes Headless Dolls</li>
       <li>In To Fratricide</li>
     </ul>
   </section>
 
-  <section>
-    <h3>Lurch</h3>
+  <section id = "lurch">
+    <h3 class ='name title'>Lurch</h3>
     <img src="http://blogs.wvgazettemail.com/popmachine/files/2014/07/Lurch.jpg" alt="Lurch">
     <ul>
       <li>Loves To Hear Things Ring</li>
