completed part 3 of readme.md

--- a/addams_family_tree.html
+++ b/addams_family_tree.html
@@ -11,12 +11,12 @@
 <body>
   <header class='tree'>
     <h1 class='title'>The Addams Family Tree</h1>
-    <img src="http://vignette3.wikia.nocookie.net/addamsfamily/images/1/15/Addamstree.png/revision/latest?cb=20130103004320" alt="gomez and cara mia">
+    <img class='hover' src="http://vignette3.wikia.nocookie.net/addamsfamily/images/1/15/Addamstree.png/revision/latest?cb=20130103004320" alt="gomez and cara mia">
   </header>
 
-  <section>
+  <section class='border'>
     <h3 class ='name title'>Gomez Addams</h3>
-    <img src="http://images2.fanpop.com/image/photos/11200000/John-Astin-Gomez-Addams-gomez-addams-11245159-450-338.jpg" alt="Gomez">
+    <img class='hover' src="http://images2.fanpop.com/image/photos/11200000/John-Astin-Gomez-Addams-gomez-addams-11245159-450-338.jpg" alt="Gomez">
     <ul>
       <li>Mustachioed</li>
       <li>Knife Thrower</li>
@@ -24,9 +24,9 @@
     </ul>
   </section>
 
-  <section id="morticia">
+  <section class='border' id="morticia">
     <h3 class ='name title'>Morticia Addams</h3>
-    <img src="https://media3.giphy.com/media/a1KF6AgZV2eEU/200_s.gif" alt="Morticia">
+    <img class='hover' src="https://media3.giphy.com/media/a1KF6AgZV2eEU/200_s.gif" alt="Morticia">
     <ul>
       <li>Dry Sense of Humour</li>
       <li>Caring Mother</li>
@@ -34,9 +34,9 @@
     </ul>
   </section>
 
-  <section>
+  <section class='border'>
     <h3 class ='name title'>Pugsley Addams</h3>
-    <img src="http://i2.cdn.turner.com/cnnnext/dam/assets/141209131444-ken-weatherwax-restricted-story-top.jpg" alt="Pugsley">
+    <img class='hover' src="http://i2.cdn.turner.com/cnnnext/dam/assets/141209131444-ken-weatherwax-restricted-story-top.jpg" alt="Pugsley">
     <ul>
       <li>Chubby</li>
       <li>Loveable</li>
@@ -44,9 +44,9 @@
     </ul>
   </section>
 
-  <section id ='wednesday'>
+  <section class='border' id ='wednesday'>
     <h3 class ='name title'>Wednesday Addams</h3>
-    <img src="http://2.bp.blogspot.com/-oj26rSAgOFc/TpeQmxrE9ZI/AAAAAAAAA10/MU-OtBYWcY4/s1600/addams3.jpg" alt="Wednesday">
+    <img class='hover' src="http://2.bp.blogspot.com/-oj26rSAgOFc/TpeQmxrE9ZI/AAAAAAAAA10/MU-OtBYWcY4/s1600/addams3.jpg" alt="Wednesday">
     <ul>
       <li class='somber'>Somber</li>
       <li>Likes Headless Dolls</li>
@@ -54,9 +54,9 @@
     </ul>
   </section>
 
-  <section id = "lurch">
+  <section class='border' id = "lurch">
     <h3 class ='name title'>Lurch</h3>
-    <img src="http://blogs.wvgazettemail.com/popmachine/files/2014/07/Lurch.jpg" alt="Lurch">
+    <img class='hover' src="http://blogs.wvgazettemail.com/popmachine/files/2014/07/Lurch.jpg" alt="Lurch">
     <ul>
       <li>Loves To Hear Things Ring</li>
       <li>Buuuuhhhh</li>
